--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,73 @@ body {
   /* height: 100%; */
   display: flex;
 }
+
+.board {
+  padding: 5px;
+  border: solid black 2px;
+  display: grid;
+  grid-template-columns: repeat(10, 1fr);
+  grid-template-rows: repeat(15, 1fr);
+  position: relative;
+}
+
+.brick {
+  border: 5px solid grey;
+  padding: 15px;
+  margin: 1px;
+  width: 7px;
+  height: 7px;
+  border-radius: 2px;
+}
+
+.state1 {
+  background-color: black;
+}
+
+.state0 {
+  background-color: auto;
+}
+
+.game-over {
+  position: absolute;
+  left: 195px;
+  top: 300px;
+  border: solid black 5px;
+  border-radius: 10px;
+  padding: 30px 50px;
+  background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.game-over button {
+  height: 50px;
+  background-color: transparent;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.game-over button:hover {
+  background-color: beige;
+}
+
+.scorePanel {
+  border: solid black 2px;
+  padding: 5px;
+  width: 350px;
+}
+
+.score {
+  font-size: x-large;
+}
+
+.next-block {
+  margin-left: 50px;
+  padding: 5px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  height: 100px;
+  width: 100px;
+}
