--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,31 @@ body {
 .controls button:hover {
   background-color: bisque;
 }
+
+.start-control {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.control-item {
+  width: 75%;
+  margin: 15px;
+  padding: 5px;
+  display: flex;
+  justify-content: space-between;
+  font-size: x-large;
+}
+
+.control-item button {
+  width: 35px;
+  border: solid 2px black;
+  border-radius: 2px;
+  background-color: transparent;
+  font-size: x-large;
+  cursor: pointer;
+}
+
+.control-item button:hover {
+  background-color: bisque;
+}
